#16: Category entity